--- a/src/bt-ifce/Makefile.am
+++ b/src/bt-ifce/Makefile.am
@@ -45,12 +45,11 @@ AM_CPPFLAGS = -Wall -Werror -I${top_srcdir}/include/logger -I${top_srcdir}/inclu
 if IS_LIBSYSWRAPPER_ENABLED
 AM_LDFLAGS = -lsecure_wrapper
 endif
-AM_LDFLAGS += -ltelemetry_msgsender
 
 lib_LTLIBRARIES = libbtrCoreIfce.la
 libbtrCoreIfce_la_SOURCES = $(BTRCORE_IFCE_SRCS)
 libbtrCoreIfce_la_CFLAGS = $(INCLUDE_FILES) $(GLIB_CFLAGS) $(LIBSYSWRAPPER_FLAG) $(SAFEC_CFLAGS)
-libbtrCoreIfce_la_LIBADD = $(GLIB_LIBS) $(BTR_CORE_LOGGER_LIBS) $(BTRCORE_IFCE_BLUEZ_LIB) $(UDEV_LIB) $(SAFEC_LFLAGS)
+libbtrCoreIfce_la_LIBADD = $(GLIB_LIBS) $(BTR_CORE_LOGGER_LIBS) $(BTRCORE_IFCE_BLUEZ_LIB) $(UDEV_LIB) $(SAFEC_LFLAGS) -ltelemetry_msgsender
 
 if BTR_IFCE_GDBUS_BLUEZ5
 libbtrCoreIfce_la_CFLAGS += $(GIO_CFLAGS) $(GIO_UNIX_CFLAGS)
