btmgr t2 event implementation

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,7 @@ SUBDIRS = bt-ifce
 INCLUDE_FILES =
 
 BTRCORE_IFCE_INC = -I${top_srcdir}/include/bt-ifce
-AM_CPPFLAGS = -Wall -Werror -I${top_srcdir}/include -I${top_srcdir}/include/logger -I${top_srcdir}/include/safec $(BTRCORE_IFCE_INC) 
+AM_CPPFLAGS = -Wall -Werror -I${top_srcdir}/include -I${top_srcdir}/include/telemetry -I${top_srcdir}/include/logger -I${top_srcdir}/include/safec $(BTRCORE_IFCE_INC) 
 
 if IS_LIBSYSWRAPPER_ENABLED
 AM_LDFLAGS = -lsecure_wrapper
@@ -30,9 +30,9 @@ endif
 lib_LTLIBRARIES = libbtrCore.la
 
 if LE_ONLY
-libbtrCore_la_SOURCES = btrCore.c btrCore_le.c btrCore_telemetry.c
+libbtrCore_la_SOURCES = btrCore.c btrCore_le.c bt-telemetry.c
 else
-libbtrCore_la_SOURCES = btrCore.c btrCore_avMedia.c btrCore_le.c btrCore_telemetry.c
+libbtrCore_la_SOURCES = btrCore.c btrCore_avMedia.c btrCore_le.c bt-telemetry.c
 endif
 
 libbtrCore_la_CFLAGS = $(INCLUDE_FILES) $(GLIB_CFLAGS) $(LIBSYSWRAPPER_FLAG) $(SAFEC_CFLAGS)
@@ -42,4 +42,4 @@ libbtrCore_la_LIBADD = $(GLIB_LIBS) $(BTR_CORE_LOGGER_LIBS) $(SAFEC_LFLAGS) $(to
 include_HEADERS = $(top_srcdir)/include/btrCoreTypes.h
 include_HEADERS += $(top_srcdir)/include/btrCore.h
 include_HEADERS += $(top_srcdir)/include/btrCore_service.h
-include_HEADERS += $(top_srcdir)/include/logger/btrCore_telemetry.h
+include_HEADERS += $(top_srcdir)/include/telemetry/bt-telemetry.h
