btmgr t2 event implementation

--- a/src/bt-ifce/Makefile.am
+++ b/src/bt-ifce/Makefile.am
@@ -20,6 +20,7 @@ SUBDIRS =
 
 INCLUDE_FILES = 
 
+
 if BTR_IFCE_DBUS_BLUEZ4
 BTRCORE_IFCE_SRCS = btrCore_dbus_bluez4.c
 BTRCORE_IFCE_BLUEZ_INC = $(DBUS_CFLAGS)
@@ -39,6 +40,9 @@ BTRCORE_IFCE_BLUEZ_LIB = $(top_builddir)/src/bt-ifce/gdbus/libbtrCoreIfceGdbus.l
 endif
 endif
 endif
+
+# Always add telemetry source
+BTRCORE_IFCE_SRCS += ../bt-telemetry.c
 
 AM_CPPFLAGS = -Wall -Werror -I${top_srcdir}/include/logger -I${top_srcdir}/include/safec -I${top_srcdir}/include/bt-ifce $(BTRCORE_IFCE_BLUEZ_INC) -I${top_srcdir}/include/telemetry
 
