btmgr t2 event implementation

--- a/src/bt-ifce/Makefile.am
+++ b/src/bt-ifce/Makefile.am
@@ -49,8 +49,8 @@ endif
 
 lib_LTLIBRARIES = libbtrCoreIfce.la
 libbtrCoreIfce_la_SOURCES = $(BTRCORE_IFCE_SRCS)
-libbtrCoreIfce_la_CFLAGS = $(INCLUDE_FILES) $(GLIB_CFLAGS) $(LIBSYSWRAPPER_FLAG) $(SAFEC_CFLAGS)
-libbtrCoreIfce_la_LIBADD = $(GLIB_LIBS) $(BTR_CORE_LOGGER_LIBS) $(BTRCORE_IFCE_BLUEZ_LIB) $(UDEV_LIB) $(SAFEC_LFLAGS) -ltelemetry_msgsender
+libbtrCoreIfce_la_CFLAGS = $(INCLUDE_FILES) $(GLIB_CFLAGS) $(LIBSYSWRAPPER_FLAG) $(SAFEC_CFLAGS) $(TELEMETRY_CFLAGS)
+libbtrCoreIfce_la_LIBADD = $(GLIB_LIBS) $(BTR_CORE_LOGGER_LIBS) $(BTRCORE_IFCE_BLUEZ_LIB) $(UDEV_LIB) $(SAFEC_LFLAGS) $(TELEMETRY_MSGLIBS)
 
 if BTR_IFCE_GDBUS_BLUEZ5
 libbtrCoreIfce_la_CFLAGS += $(GIO_CFLAGS) $(GIO_UNIX_CFLAGS)
